- перевод всей логики FilmController на работу с БД вместо хэш мапы - корректировка автотестов для проверки UserController - добавление тестов на проверку БД отдельно он контроллера UserController